@@ -1,3 +1,14 @@
+2008-03-18  Tambet Ingo  <tambet@gmail.com>
+
+	Implement wired 802.1x authentication.
+
+	* src/applet-device-wired.c (get_secrets_dialog_response_cb): Implement.
+	(wired_get_secrets): Implement.
+
+	* src/wired-dialog.[ch]: Implement.
+
+	* src/Makefile.am: Add wired-dialog.[ch] to build.
+
 2008-03-18  Dan Williams  <dcbw@redhat.com>
 
 	* src/vpn-password-dialog.c
